--- a/src/content/blog/2024-12-24-new-year.md
+++ b/src/content/blog/2024-12-24-new-year.md
@@ -5,9 +5,9 @@ date: 2024-12-24
 ---
 New year. New me.
 
-- Leave Facebook
+- Leave Facebook ✅
 - Start calling friends on their birthdays
 - Start handwriting letters
-- Learn to cook 12 new dishes
-- Run at least 1000 miles (1609 km)
+- Learn to cook 12 new dishes (8.3% done)
+- Run at least 1000 miles (1609 km) (4% done)
 - Read 12 books
