--- a/src/content/blog/2024-12-24-new-year.md
+++ b/src/content/blog/2024-12-24-new-year.md
@@ -1,13 +1,13 @@
 ---
 title: New Year
-description: Next year will be different. They usually are, right?
+description: New year. New me.
 date: 2024-12-24
 ---
-New year. New me.
-
-- Leave Facebook ✅
-- Start calling friends on their birthdays
-- Start handwriting letters
-- Learn to cook 12 new dishes (8.3% done)
-- Run at least 1000 miles (1609 km) (4% done)
-- Read 12 books
+|                                           |                             |
+|-------------------------------------------|-----------------------------|
+| Leave Facebook                            | Done                        |
+| Start calling friends on their birthdays  |                             |
+| Start handwriting letters                 |                             |
+| Learn to cook 12 new dishes               | <span class="mono nowrap">[->------------------] 8.3%</span> |
+| Run at least 1000 miles (1609 km)         | <span class="mono nowrap">[>-------------------] 4.4%</span> |
+| Read 12 books                             | <span class="mono nowrap">[->------------------] 8.3%</span> |
